[BUGFIX] web_app_theme CSS gets compiled into application.css

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= content_for(:title) + " | Adam 'Snark' Rabbit"
-    = stylesheet_link_tag 'application', 'web_app_theme'
+    = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tag
   %body
