--- a/api/app/views/profiles/show.html.haml
+++ b/api/app/views/profiles/show.html.haml
@@ -1,5 +1,10 @@
 %p
   %b Name:
   = @profile.name
+  %br
+  %b Email Addresses:
+  %ul
+    - @profile.email_addresses.each do |email_address|
+      %li= email_address.address
 
 = link_to '(edit)', edit_profile_path(@profile)
