[DEPLOY] Configure the adam root domain and use everywhere
* Databags should be created manually for each environment

--- a/dev_environment/cookbooks/adam/templates/default/env.erb
+++ b/dev_environment/cookbooks/adam/templates/default/env.erb
@@ -1,16 +1,16 @@
-GITHUB_KEY=
-GITHUB_SECRET=
-TWITTER_KEY=
-TWITTER_SECRET=
-ADAM_MEMORY_AMQP_HOST=localhost
+GITHUB_KEY=<%= node['adam']['github_key'] %>
+GITHUB_SECRET=<%= node['adam']['github_secret'] %>
+TWITTER_KEY=<%= node['adam']['twitter_key'] %>
+TWITTER_SECRET=<%= node['adam']['twitter_secret'] %>
+ADAM_MEMORY_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_MEMORY_AMQP_USERNAME=rails
 ADAM_MEMORY_AMQP_PASSWORD=password
-ADAM_FINGERS_JID=adam@local.adamrabbit.net
+ADAM_FINGERS_JID=adam@<%= node['adam']['root_domain'] %>
 ADAM_FINGERS_PASSWORD=abc123
 ADAM_FINGERS_DEBUG=true
-ADAM_FINGERS_AMQP_HOST=local.adamrabbit.net
+ADAM_FINGERS_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_FINGERS_AMQP_USERNAME=fingers
 ADAM_FINGERS_AMQP_PASSWORD=password
-ADAM_BRAIN_AMQP_HOST=local.adamrabbit.net
+ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
