[DEPLOY] Set bing translate credentials in the app environment

--- a/dev_environment/cookbooks/adam/templates/default/env.erb
+++ b/dev_environment/cookbooks/adam/templates/default/env.erb
@@ -14,3 +14,6 @@ ADAM_FINGERS_AMQP_PASSWORD=password
 ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
+
+BING_TRANSLATE_KEY=<%= node['adam']['bing_translate_key'] %>
+BING_TRANSLATE_SECRET=<%= node['adam']['bing_translate_secret'] %>
