--- a/dev_environment/cookbooks/adam/templates/default/env.erb
+++ b/dev_environment/cookbooks/adam/templates/default/env.erb
@@ -1,3 +1,4 @@
+RAILS_ENV=<%= node['adam']['environment'] %>
 GITHUB_KEY=<%= node['adam']['github_key'] %>
 GITHUB_SECRET=<%= node['adam']['github_secret'] %>
 TWITTER_KEY=<%= node['adam']['twitter_key'] %>
