[MEMORY] Make user data available via HTTP API

--- a/dev_environment/cookbooks/adam/templates/default/env.erb
+++ b/dev_environment/cookbooks/adam/templates/default/env.erb
@@ -3,6 +3,7 @@ GITHUB_KEY=<%= node['adam']['github_key'] %>
 GITHUB_SECRET=<%= node['adam']['github_secret'] %>
 TWITTER_KEY=<%= node['adam']['twitter_key'] %>
 TWITTER_SECRET=<%= node['adam']['twitter_secret'] %>
+ADAM_INTERNAL_PASSWORD=<%= node['adam']['internal_password'] %>
 ADAM_MEMORY_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_MEMORY_AMQP_USERNAME=rails
 ADAM_MEMORY_AMQP_PASSWORD=password
