[MEMORY] Add simple web chat UI
Say hello to adam on login

Restrictions so far:
* No styling at all
* Very basic UI, no status/presence
* Using foreign BOSH service pending setup of one on the root domain
* Using a hard-coded XMPP account on jabber.org pending addition of JID per account & auth solution

--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -1,3 +1,14 @@
 - title "Welcome", false
 
+%br
+%br
+%br
+
 %p This is a static home page
+
+#log
+
+#chat{:style => 'text-align: center'}
+  #form{:name => 'chat'}
+    %input#message{:type => 'message'}
+    %input#send{:type => 'button', :value => 'Send'}
