[MEMORY] Send message on hitting enter

--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -9,6 +9,6 @@
 #log
 
 #chat{:style => 'text-align: center'}
-  #form{:name => 'chat'}
-    %input#message{:type => 'message'}
-    %input#send{:type => 'button', :value => 'Send'}
+  %form{:name => 'chat'}
+    %input#message{:type => 'text'}
+    %input{:type => 'submit', :value => 'Send'}
