--- a/dev_environment/cookbooks/adam/templates/default/ejabberd_auth.erb
+++ b/dev_environment/cookbooks/adam/templates/default/ejabberd_auth.erb
@@ -17,70 +17,81 @@ $logger.level = Logger::DEBUG
 # Ruby 1.9 uses 'S>'
 PACK_FORMAT = RUBY_VERSION =~ /^1\.9/ ? 'S>' : 'n'
 
-def fetch_user(user_id)
-  url = "http://<%= @root_domain %>"
-  password = "<%= @internal_password %>"
-  $logger.debug "Making connection to #{url} using #{password}"
+class Auth
+  def initialize
+    url = "http://<%= @root_domain %>:3000"
+    password = "<%= @internal_password %>"
+    $logger.debug "Making connection to #{url} using #{password}"
 
-  conn = Faraday.new url: url do |c|
-    c.basic_auth 'internal', password
-    c.adapter :net_http
-    c.response :logger
-    c.use FaradayMiddleware::ParseJson, content_type: 'application/json'
-    c.response :raise_error
+    @conn = Faraday.new url: url do |c|
+      c.basic_auth 'internal', password
+      c.adapter :net_http
+      c.use FaradayMiddleware::ParseJson, content_type: 'application/json'
+      c.response :raise_error
+    end
   end
 
-  conn.get "/users/#{user_id}.json"
-end
+  def process_creds(operation, username, domain, password)
+    case operation
+    when 'auth'
+      auth username, password
+    when 'isuser'
+      isuser username
+    when 'setpass'
+    else
+      raise 'Invalid Operation'
+    end
 
-def auth(user_id, token)
-  $logger.debug "Checking creds for #{user_id} with password #{token}"
-  if user_id == "adam" && token == "abc123"
+    respond true
+  rescue
+    respond
+    raise
+  end
+
+  private
+
+  def fetch_user(user_id)
+    @conn.get "/users/#{user_id}.json"
+  end
+
+  def auth(user_id, token)
+    $logger.debug "Checking creds for #{user_id} with password #{token}"
+    if user_id == "adam" && token == "abc123"
+      true
+    else
+      response = fetch_user user_id
+      raise 'Password incorrect' unless response.body['authentication_token'] == token
+    end
+  rescue Faraday::Error::ResourceNotFound
+    raise "User doesn't exist"
+  end
+
+  def isuser(user_id)
+    $logger.debug "Checking if #{user_id} is a user"
+    fetch_user user_id
     true
-  else
-    response = fetch_user user_id
-    raise 'Password incorrect' unless response.body['token'] == token
-  end
-rescue Faraday::Error::ResourceNotFound
-  raise "User doesn't exist"
-end
-
-def isuser(user_id)
-  $logger.debug "Checking if #{user_id} is a user"
-  fetch_user user_id
-  true
-rescue Faraday::Error::ResourceNotFound
-  raise "User doesn't exist"
-end
-
-def process_creds(operation, username, domain, password)
-  case operation
-  when 'auth'
-    auth username, password
-  when 'isuser'
-    isuser username
-  when 'setpass'
-  else
-    raise 'Invalid Operation'
+  rescue Faraday::Error::ResourceNotFound
+    raise "User doesn't exist"
   end
 
-  respond true
-rescue
-  respond
-  raise
-end
-
-def respond(val = false)
-  response = val ? 1 : 0
-  $logger.debug "Responding with #{response}"
-  STDOUT.syswrite [2, response].pack(PACK_FORMAT*2)
+  def respond(val = false)
+    response = val ? 1 : 0
+    $logger.debug "Responding with #{response}"
+    data = [2, response].pack(PACK_FORMAT*2)
+    $logger.debug "Printing #{data}"
+    $stdout.write data
+  end
 end
 
 $logger.info "Starting ejabberd authentication service"
 
+auth = Auth.new
+
 begin
   loop do
+    $logger.info "Waiting for data..."
     msg = $stdin.read 2
+    next unless msg
     length = msg.unpack(PACK_FORMAT).first
 
     $logger.debug "Reading #{length} bytes of data"
@@ -88,7 +99,7 @@ begin
     $logger.debug "Read message #{msg}"
     data = msg.split ':'
 
-    process_creds *data
+    auth.process_creds *data
   end
 rescue => e
   $logger.error "#{e.class.name}: #{e.message}"
