[MEMORY] Don't enable chat form until XMPP connection comes up

--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -11,4 +11,4 @@
 #chat{:style => 'text-align: center'}
   %form{:name => 'chat'}
     %input#message{:type => 'text'}
-    %input{:type => 'submit', :value => 'Send'}
+    %input#send_message{:type => 'submit', :value => 'Send', :disabled => true}
