[BRAIN] Report exceptions to errbit

--- a/dev_environment/cookbooks/adam/templates/default/env.erb
+++ b/dev_environment/cookbooks/adam/templates/default/env.erb
@@ -17,6 +17,8 @@ ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=<%= node['adam']['root_domain'] %>
+AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
+AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
 
 BING_TRANSLATE_KEY=<%= node['adam']['bing_translate_key'] %>
 BING_TRANSLATE_SECRET=<%= node['adam']['bing_translate_secret'] %>
