[DEPLOY] Install FreeSWITCH with mod_rayo
Connect ears app and remove dead code

--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -19,6 +19,8 @@ ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=<%= node['adam']['root_domain'] %>
 AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
 AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
+AHN_PLATFORM_LOGGING_LEVEL=debug
+AHN_PUNCHBLOCK_USERNAME=usera@<%= node['adam']['root_domain'] %>
 
 BING_TRANSLATE_KEY=<%= node['adam']['bing_translate_key'] %>
 BING_TRANSLATE_SECRET=<%= node['adam']['bing_translate_secret'] %>
