--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -21,6 +21,7 @@ AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
 AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
 AHN_PLATFORM_LOGGING_LEVEL=debug
 AHN_PUNCHBLOCK_USERNAME=usera@<%= node['adam']['root_domain'] %>
+AHN_PUNCHBLOCK_PORT=<%= node['adam']['punchblock_port'] %>
 
 BING_TRANSLATE_KEY=<%= node['adam']['bing_translate_key'] %>
 BING_TRANSLATE_SECRET=<%= node['adam']['bing_translate_secret'] %>
