--- a/memory/app/assets/stylesheets/application.css
+++ b/memory/app/assets/stylesheets/application.css
@@ -5,3 +5,104 @@
  *= require_self
  *= require_tree . 
 */
+img { max-width: 100%; }
+
+.arabbit .image, .caller .image {
+    width: 100px;
+}
+
+body {
+    background-color: #151b20;
+    color: #6b787f;
+}
+
+#messages {
+    padding: 20px;
+}
+
+.message .bubble {
+    background-color: white;
+    border-radius: 10px;
+    font-size: 1.2em;
+    line-height: 1.0em;
+    padding: 20px;
+    max-width: 575px;
+}
+
+#messages .message .big-text {
+    font-size: 1.6em;
+    line-height: 1.2em;
+}
+
+#messages .message .bubble .separator {
+    display: block;
+    width: 21%;
+    height: 1px;
+    border-bottom: 2px groove rgba(165, 24, 54, 0.48);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.message .bubble p:last-of-type {
+    margin-bottom: 0;
+}
+
+.row_separator{
+    margin-bottom: 20px;
+    border-bottom: 2px groove #666;
+    padding-bottom: 20px;
+    width: 35%;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+#messages .caller .bubble {
+    float: right;
+}
+
+#messages .arabbit .bubble {
+    float: left;
+}
+
+.caller .triangle {
+    float: right;
+    position: relative;
+    top: 15px;
+    display: block;
+    border-color: transparent transparent transparent white;
+    border-style: solid;
+    border-width: 10px;
+    height:0;
+    width:0;
+    z-index:100;
+}
+
+.arabbit .triangle {
+    position: relative;
+    float: left;
+    display: block;
+    content: "";
+    border-color: transparent white transparent transparent;
+    border-style: solid;
+    border-width: 10px;
+    height:0;
+    width:0;
+    top: 15px;
+    /*bottom: 27px;*/
+    /*right:19px;*/
+    z-index:100;
+}
+
+.arabbit > .row, .caller > .row {
+    margin-left: 0;
+}
+
+.typing {
+    height: 26px;
+    width: 20px;
+}
+
+.dot {
+    font-size: 1.2em;
+    color: #961530;
+}
