[EARS] Basic integration with AT&T speech recognition
No linkage with the Brain yet so not very useful.

--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -27,3 +27,6 @@ WIT_API_KEY=<%= node['adam']['wit_api_key'] %>
 
 BING_TRANSLATE_KEY=<%= node['adam']['bing_translate_key'] %>
 BING_TRANSLATE_SECRET=<%= node['adam']['bing_translate_secret'] %>
+
+ATT_ASR_KEY=<%= node['adam']['att_asr_key'] %>
+ATT_ASR_SECRET=<%= node['adam']['att_asr_secret'] %>
