--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -13,6 +13,9 @@ ADAM_FINGERS_DEBUG=true
 ADAM_FINGERS_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_FINGERS_AMQP_USERNAME=fingers
 ADAM_FINGERS_AMQP_PASSWORD=password
+ADAM_EARS_AMQP_HOST=<%= node['adam']['root_domain'] %>
+ADAM_EARS_AMQP_USERNAME=ears
+ADAM_EARS_AMQP_PASSWORD=password
 ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
