Reanimated functionality and restyled for a lighter theme.

--- a/memory/app/assets/javascripts/chat.js.coffee.erb
+++ b/memory/app/assets/javascripts/chat.js.coffee.erb
@@ -62,13 +62,26 @@ $(document).ready getCreds
 
 # Code from Mel
 
+# Global things that make everything better.
+adamSpokeLast = undefined
+adamIsThinking = false
+animationTime = 250
+typingInterval = false
+
+$(document).ready ->
+  rabbitSpeech "How can I help?"
+  callerSpeech "Hark!"
+  rabbitSpeech "A vagrant!!"
+  rabbitSpeech null
+  callerSpeech "ahem?"
+  rabbitSpeech "A vagrant."
+
 # Display rabbit's message.
 # Send 'null' if Adam is thinking.
 rabbitSpeech = (message) ->
   unless message?
     unless adamIsThinking
-
-      # We don't want to append an empty space.
+      # We don't want to append an empty space!
       message = "<p class=\"typing\"></p>"
       if adamSpokeLast
         lastMessageBubble = $("#messages > .arabbit:first .bubble")
@@ -84,21 +97,17 @@ rabbitSpeech = (message) ->
       typing()
   else
     if adamIsThinking or adamSpokeLast
-
       # Remove his thinking indicator and replace it with his message, and kill the interval. Not in that order.
       clearInterval typingInterval
       typingInterval = false
       $(".arabbit .typing").html("").css(display: "none").addClass("not-typing").removeClass "typing"
       if adamIsThinking
-        $(".arabbit .not-typing").html(message).show("slide",
-          direction: "left"
-        , animationTime).removeClass "not-typing"
+        $(".arabbit .not-typing").html(message).show("slide", direction: "left" , animationTime).removeClass "not-typing"
       else
         lastMessageBubble = $("#messages > .arabbit:first .bubble")
         appendTextBubble message, lastMessageBubble, "left"
       adamIsThinking = false # Brainless bunnies behave belligerently when bombarded by big thoughts.
     else
-
       # Start a new row for him.
       row message
       scrubSeparators()
@@ -106,15 +115,13 @@ rabbitSpeech = (message) ->
 # Display caller's message.
 callerSpeech = (message) ->
   if not adamSpokeLast or adamIsThinking
-
     # Find caller's latest text bubble, and pop it in there.
     lastMessageBubble = $("#messages > .caller:first .bubble")
     if typeof lastMessageBubble isnt "undefined" and lastMessageBubble.length > 0
       appendTextBubble message, lastMessageBubble, "right"
     else
-
       # Create a row since one didn't exist before, but put it at the bottom.
-      newMessage = "<div class=\"caller\"><div class=\"row\"><div class=\"span9 offset1 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display:none;\">" + message + "</p></div></div><div class=\"span2 image\"><%= image_tag('ada.jpg').gsub /"/, '\\"' %></div></div></div><div class=\"row_separator\"></div>"
+      newMessage = "<div class=\"caller\"><div class=\"row\"><div class=\"span9 offset1 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display:none;\">" + message + "</p></div></div><div class=\"span2 image avatar ada\"></div></div></div><div class=\"row_separator\"></div>"
       $("#messages").append newMessage + "<div class=\"separator\"></div>"
       $("#messages > .caller:first .bubble p").show "slide",
         direction: "right"
@@ -122,34 +129,29 @@ callerSpeech = (message) ->
   else
     row message
     scrubSeparators()
+
 appendTextBubble = (message, lastMessageBubble, direction) ->
-  $("<p style=\"display: none;\">" + message + "</p><div class=\"separator\"></div>").prependTo(lastMessageBubble).show "slide",
-    direction: direction
-  , animationTime
+  $("<p style=\"display: none;\">" + message + "</p><div class=\"separator\"></div>").prependTo(lastMessageBubble).show "slide", direction: direction , animationTime
 
 # Outputs a row for whoever didn't speak last, and switches who spoke last.
 row = (message) ->
-  newMessage = undefined
   newBubbleP = null
   direction = "right"
   if adamSpokeLast
-    newMessage = "<div class=\"caller\"><div class=\"row\"><div class=\"span9 offset1 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display:none;\">" + message + "</p></div></div><div class=\"span2 image\"><%= image_tag('ada.jpg').gsub /"/, '\\"' %></div></div></div><div class=\"row_separator\"></div>"
+    newMessage = "<div class=\"caller\"><div class=\"row\"><div class=\"span9 offset1 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display:none;\">" + message + "</p></div></div><div class=\"span2 image avatar ada\"></div></div></div><div class=\"row_separator\"></div>"
   else
-    newMessage = "<div class=\"arabbit\"><div class=\"row\"><div class=\"span2 image\"><%= image_tag('arabbit.jpeg').gsub /"/, '\\"' %></div><div class=\"span9 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display: none;\">" + message + "</p></div></div></div></div><div class=\"row_separator\"></div>"
+    newMessage = "<div class=\"arabbit\"><div class=\"row\"><div class=\"span2 image avatar rabbit\"></div><div class=\"span9 message\"><div class=\"triangle\"></div><div class=\"bubble big-text\"><p style=\"display: none;\">" + message + "</p></div></div></div></div><div class=\"row_separator\"></div>"
     direction = "left"
   $("#messages").prepend newMessage + "<div class=\"separator\"></div>"
   if adamSpokeLast
     newBubbleP = $("#messages > .caller:first .bubble p")
   else
     newBubbleP = $("#messages > .arabbit:first .bubble p")
-  $(newBubbleP).show "slide",
-    direction: direction
-  , animationTime
+  $(newBubbleP).show "slide", direction: direction , animationTime
   adamSpokeLast = not adamSpokeLast
 
 # Show that Adam is typing with a cute little animation.
 typing = ->
-
   # Don't start another typing if we're already typing!
   unless typingInterval
     typingArea = $(".typing")
@@ -173,12 +175,6 @@ scrubSeparators = ->
     $("#messages .caller:first .separator").css display: "none"
     $("#messages .arabbit .big-text").not(":eq(0)").removeClass "big-text"
   $("p:empty").not(".typing").remove()
-adamSpokeLast = undefined
-adamIsThinking = false
-animationTime = 250
-typingInterval = false
-$(document).ready ->
-  rabbitSpeech "How can I help?"
 
 
 
