--- a/memory/app/views/layouts/application.html.haml
+++ b/memory/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %title= content_for?(:title) ? yield(:title) + " | Adam 'Snark' Rabbit" : "Adam 'Snark' Rabbit"
+    %link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css')
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -39,16 +40,8 @@
 
       .content
         .row
-          .span9
+          .span12
             = yield
-          .span3
-            .well.sidebar-nav
-              %h3 Sidebar
-              %ul.nav.nav-list
-                %li.nav-header Sidebar
-                %li= link_to "Link 1", "/path1"
-                %li= link_to "Link 2", "/path2"
-                %li= link_to "Link 3", "/path3"
 
       %footer
         %p &copy; Mojo Lingo LLC 2013
