Update suggested questions and make them more visible

--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -137,3 +137,9 @@ body {
 	padding: 10px;
 	border-radius: 5px;
 }
+
+.suggestions ul li {
+  font-size: 1.3em;
+  padding-bottom: 10px;
+  font-weight: bold;
+}
