--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -14,24 +14,11 @@
       .image
         = image_tag('ada.jpg')
       .suggestions
-        %h3 Suggestions
+        %h3 What to ask?
         %ul
-          %li Translate text to another language!
-          %li Ask what time it is.
+          %li How do you say "call me" in Swedish?
+          %li What time is it?
           %li "Tweet this message: ..."
-          %li Ask about the weather!
-          %li Perhaps you'd like a dining recommendation?
-      .past_searches
-        %h3 Past Searches
-        %ul
-          %li
-            %p Q: What is the air-speed velocity of an unladen swallow?
-            %p A: 11 m/s, or 24 mph
-            %p
-              %em This was texted to you.
-          %li
-            %p Q: How much wood can a wood-chuck chuck?
-            %p A: A wood-chuck would chuck as much wood as a wood-chuck could chuck.
-            %p
-              %em This was not texted to you.
+          %li Mirror, mirror on the wall, who is the fairest of them all?
+          %li Who is speaking right now?
     #messages.span9
