--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -30,7 +30,7 @@ body {
     font-size: 1.2em;
     line-height: 1.0em;
     padding: 20px;
-    max-width: 575px;
+    max-width: 550px !important;
 }
 
 #messages .message .big-text p {
