--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -143,3 +143,24 @@ body {
   padding-bottom: 10px;
   font-weight: bold;
 }
+
+#chat {
+    position: absolute;
+    top: 6px;
+}
+
+.too-noisy {
+    display: inline-block;
+    padding-right: 15px;
+    color: #ccc;
+    text-shadow: 1px 1px rgba(255,255,255,1);
+    cursor: pointer;
+}
+
+form[name=chat] {
+    display: inline-block;
+}
+
+form[name=chat] input#message {
+    margin: 0;
+}
