--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -1,6 +1,8 @@
 - title "Welcome", false
 
-#chat{:style => 'text-align: center'}
+#chat
+  .too-noisy
+    Too Noisy?
   %form{:name => 'chat'}
     %input#message{:type => 'text'}
     %input#send_message{:type => 'submit', :value => 'Send', :disabled => true}
