--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -1,5 +1,9 @@
 - title "Welcome", false
 
+#curtain-call
+  .middle
+    %h1{ class: 'rotate curtain-caller' } CALL ME MAYBE?
+    %h1 678-869-2048
 #chat
   .too-noisy
     Too Noisy?
@@ -23,4 +27,5 @@
           %li "Tweet this message: ..."
           %li Mirror, mirror on the wall, who is the fairest of them all?
           %li Who is speaking right now?
+          %li{class: 'curtain-caller'} Curtains!
     #messages.span9
