--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -164,3 +164,28 @@ form[name=chat] {
 form[name=chat] input#message {
     margin: 0;
 }
+
+#curtain-call {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999999999999999999999999999999999999999;
+    text-align: center;
+    display: none;
+    background-color: #961530;
+    color: white;
+    text-shadow: 2px 2px black;
+    padding-top: 9999px;
+    margin-top: -9999px;
+}
+
+#curtain-call .middle {
+    display: table-cell;
+    height: 100%;
+    width: 100%;
+    vertical-align: middle;
+}
+
+h1.rotate {
+    font-size: 5em;
+}
