Curtains now start on.

--- a/memory/app/assets/javascripts/chat.js.coffee.erb
+++ b/memory/app/assets/javascripts/chat.js.coffee.erb
@@ -77,6 +77,7 @@ $(document).ready ->
   $('#chat').css( {right: too_noisy_right, zIndex: '99999999'} )
   # Adjust the curtains.
   sizeCurtains()
+  curtainCall()
 
 $(window).resize ->
   sizeCurtains()
