Added curtain timer, randomized initial curtain message, moved curtains link to footer, and cleared the stage after a curtain drop.

--- a/memory/app/views/layouts/application.html.haml
+++ b/memory/app/views/layouts/application.html.haml
@@ -44,7 +44,8 @@
             = yield
 
       %footer
-        %p &copy; Mojo Lingo LLC 2013
+        %span &copy; Mojo Lingo LLC 2013 - 
+        %span{class: 'curtain-caller'} Curtains!
     /
       Javascripts
       \==================================================
