--- a/adam_cookbook/templates/default/ejabberd_auth.erb
+++ b/adam_cookbook/templates/default/ejabberd_auth.erb
@@ -88,6 +88,7 @@ auth = Auth.new
 
 begin
   loop do
+    return if $stdin.eof?
     msg = $stdin.read 2
     next unless msg
     length = msg.unpack(PACK_FORMAT).first
