--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -123,7 +123,7 @@ body {
 }
 
 .avatar.ada {
-    background-image: url(<%= image_path('ada.jpg') %>);
+    background-image: url(<%= image_path('caller.png') %>);
     background-size: cover;
 }
 
