--- a/memory/app/views/layouts/application.html.haml
+++ b/memory/app/views/layouts/application.html.haml
@@ -38,14 +38,13 @@
     .container
       = render :partial => "shared/flash_messages", :locals => {:flash => flash}
 
-      .content
-        .row
-          .span12
-            = yield
+    = yield
 
-      %footer
-        %span &copy; Mojo Lingo LLC 2013 - 
-        %span{class: 'curtain-caller'} Curtains!
+    %footer
+      .container
+        .span12
+          %span &copy; Mojo Lingo LLC 2013 - 
+          %span{class: 'curtain-caller'} Curtains!
     /
       Javascripts
       \==================================================
