--- a/memory/app/assets/stylesheets/application.css.erb
+++ b/memory/app/assets/stylesheets/application.css.erb
@@ -172,7 +172,9 @@ form[name=chat] input#message {
     z-index: 9999999999999999999999999999999999999999;
     text-align: center;
     display: none;
-    background-color: #961530;
+    background-image: url(<%= image_path('curtain3.png') %>), url(<%= image_path('curtain2.png') %>),url(<%= image_path('curtain1.jpg') %>);
+    background-size:  703px 100%, 300px 100%, 109px 100%;
+    height: 100%;
     color: white;
     text-shadow: 2px 2px black;
     padding-top: 9999px;
