Use smaller logo to keep focus on the hook/phone number

--- a/memory/app/views/static/home.html.haml
+++ b/memory/app/views/static/home.html.haml
@@ -2,9 +2,13 @@
 
 #curtain-call
   .middle
-    %img{ src: image_path('ML_LOGO_WHITE_HIRES.png'), style: 'max-width: 75%;', class: 'curtain-caller' }
+    %br
+    %br
     %h1{ class: 'rotate curtain-caller' } 
     %h1 678-869-2048
+    %br
+    %br
+    %img{ src: image_path('ML_LOGO_WHITE.png'), style: 'max-width: 75%;', class: 'curtain-caller' }
 #chat
   .too-noisy
     Too Noisy?
