--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -20,6 +20,7 @@ ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=<%= node['adam']['root_domain'] %>
+ADAM_MEMORY_URL=<%= node['adam']['memory_base_url'] %>
 AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
 AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
 AHN_PLATFORM_LOGGING_LEVEL=debug
