--- a/adam_cookbook/templates/default/foreman.erb
+++ b/adam_cookbook/templates/default/foreman.erb
@@ -1,2 +1,2 @@
 port: 3000
-concurrency: memory=1,ears=1,fingers=1,brain=1
+concurrency: memory=<%= @memory_count %>,ears=<%= @ears_count %>,fingers=<%= @fingers_count %>,brain=<%= @brain_count %>
