--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -4,19 +4,19 @@ GITHUB_SECRET=<%= node['adam']['github_secret'] %>
 TWITTER_KEY=<%= node['adam']['twitter_key'] %>
 TWITTER_SECRET=<%= node['adam']['twitter_secret'] %>
 ADAM_INTERNAL_PASSWORD=<%= node['adam']['internal_password'] %>
-ADAM_MEMORY_AMQP_HOST=<%= node['adam']['root_domain'] %>
+ADAM_MEMORY_AMQP_HOST=<%= node['adam']['amqp_host'] %>
 ADAM_MEMORY_AMQP_USERNAME=memory
 ADAM_MEMORY_AMQP_PASSWORD=password
 ADAM_FINGERS_JID=adam@<%= node['adam']['root_domain'] %>
 ADAM_FINGERS_PASSWORD=abc123
 ADAM_FINGERS_DEBUG=true
-ADAM_FINGERS_AMQP_HOST=<%= node['adam']['root_domain'] %>
+ADAM_FINGERS_AMQP_HOST=<%= node['adam']['amqp_host'] %>
 ADAM_FINGERS_AMQP_USERNAME=fingers
 ADAM_FINGERS_AMQP_PASSWORD=password
-ADAM_EARS_AMQP_HOST=<%= node['adam']['root_domain'] %>
+ADAM_EARS_AMQP_HOST=<%= node['adam']['amqp_host'] %>
 ADAM_EARS_AMQP_USERNAME=ears
 ADAM_EARS_AMQP_PASSWORD=password
-ADAM_BRAIN_AMQP_HOST=<%= node['adam']['root_domain'] %>
+ADAM_BRAIN_AMQP_HOST=<%= node['adam']['amqp_host'] %>
 ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=<%= node['adam']['root_domain'] %>
