[DEPLOY] Use test domain in distributed test environment
Should make XMPP and Rayo work

--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -24,7 +24,7 @@ ADAM_MEMORY_URL=<%= node['adam']['memory_base_url'] %>
 AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
 AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
 AHN_PLATFORM_LOGGING_LEVEL=debug
-AHN_PUNCHBLOCK_USERNAME=usera@<%= node['adam']['root_domain'] %>
+AHN_PUNCHBLOCK_USERNAME=usera@<%= node['adam']['rayo_domain'] %>
 AHN_PUNCHBLOCK_PORT=<%= node['adam']['punchblock_port'] %>
 
 WIT_API_KEY=<%= node['adam']['wit_api_key'] %>
